fix spacing of last paragraph on page
... which may not be an HTML paragraph (i.e. not in <p>).

--- a/web/style.css
+++ b/web/style.css
@@ -36,16 +36,15 @@ body {
   hyphens: auto;
   hyphenate-limit-chars: 4 2 2;
   min-height: 100vh;
+  line-height: var(--line-height);
 }
 
 p {
-  margin: var(--parsep) 0 0 0;
-  line-height: var(--line-height);
+  margin: var(--parsep) 0;
 }
 
 li {
   margin: calc(0.5*var(--parsep)) 0 0 0;
-  line-height: var(--line-height);
 }
 
 /* p + p { */
